--- a/caa-notebook.ipynb
+++ b/caa-notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0.2 Functions"
+    "### 0.2 Processing Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "4   1561983831   1561983842  00:03:53  00:04:04         92         11"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8ecc4e42b0>]"
+       "[<matplotlib.lines.Line2D at 0x7fa97182bc18>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,16 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8ef016ceb8>]"
+       "[<matplotlib.lines.Line2D at 0x7fa971d6a748>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preparing the dataset implied creating the target variable recurring to the observed timestamps. The features will be all the accelerations 0.5sec to the left and right."
+    "Preparing the dataset implied creating the target variable by using the observed timestamps. The features used for the algorithms will be all the acceleration values 0.5sec to the left and right of a given sample.\n",
+    "\n",
+    "Here we have:\n",
+    "\n",
+    "+ Adding the target variable\n",
+    "+ Creating the Numpy arrays and saving them\n",
+    "    + One array for the TLFN\n",
+    "    + Another for the LSTM Network"
    ]
   },
   {
@@ -691,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,48 +711,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This dataset has 56268 entries, 30 timesteps and 3 features per timestep.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"This dataset has {data.shape[0]} entries, {data.shape[1]} timesteps and {data.shape[2]-1} features per timestep.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It was managed to create the target variable and testing creating an array the arrays for the TLFN and LSTM."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2.1 Preparing files for all patients\n",
     "\n",
-    "#### Files for DNN"
+    "#### Files for TLFN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['P1',\n",
-       " 'P2',\n",
-       " 'P3',\n",
-       " 'P5',\n",
-       " 'P6',\n",
-       " 'P7',\n",
-       " 'P8',\n",
-       " 'P9',\n",
-       " 'P10',\n",
-       " 'P11',\n",
-       " 'P12',\n",
-       " 'P13',\n",
-       " 'P14',\n",
-       " 'P15',\n",
-       " 'P16']"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "files = [f\"P{n}\" for n in range(1,17)]\n",
-    "files.remove(\"P4\") # Had to be removed due to problems in timestamps\n",
-    "files"
+    "files.remove(\"P4\") # Had to be removed due to problems in timestamps"
    ]
   },
   {
@@ -884,16 +889,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f441f160da0>]"
+       "[<matplotlib.lines.Line2D at 0x7fa971ac4e10>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -917,19 +922,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resampled dataset shape Counter({0.0: 47937, 1.0: 13710})\n"
+      "Processed dataset shape Counter({0.0: 47937, 1.0: 13710})\n"
      ]
     }
    ],
    "source": [
-    "print('Resampled dataset shape %s' % Counter(data[:,-1]))"
+    "print('Processed dataset shape %s' % Counter(data[:,-1]))"
    ]
   },
   {
@@ -948,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,22 +999,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data shape is (668649, 91)\n",
-      "Test data shape is (129765, 91)\n"
+      "Train data shape is (798414, 91)\n",
+      "Test data shape is (54288, 91)\n"
      ]
     }
    ],
    "source": [
     "# This is an example of how the function works\n",
     "\n",
-    "data_train, data_test = train_test_Xy([p1, p2, p3, p5, p7, p8, p9, p10, p11, p12, p13, p14], [p6, p15, p16])\n",
+    "data_train, data_test = train_test_Xy([p1, p2, p3, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14, p15, p16], [p6])\n",
     "print(f\"Train data shape is {data_train.shape}\")\n",
     "print(f\"Test data shape is {data_test.shape}\")"
    ]
@@ -1023,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1145,12 +1150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Applying a DNN to training and test set"
+    "## 5. Important Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,9 +1183,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1 DNN\n",
+    "## 6. Applying a Deep Learning to training and test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1 DNN\n",
     "\n",
-    "#### 5.1.1 Model"
+    "#### 6.1.1 Model\n",
+    "\n",
+    "First we create the algorithm"
    ]
   },
   {
@@ -1260,7 +1274,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.1.2 Patient KFold"
+    "#### 6.1.2 Patient KFold\n",
+    "\n",
+    "This test consists on using all patients except one for training, and testing on that last one. All patients end up being used as test once."
    ]
   },
   {
@@ -1359,6 +1375,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm tends to overfit right after. With the dropout and contraint on the norm of the weights, some better results are attained with the validation set in future epochs, but this is rare."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -1437,7 +1460,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Individual Patient Train-Test"
+    "---\n",
+    "\n",
+    "#### 6.1.3 Individual Patient Train-Test\n",
+    "\n",
+    "In this example, the algorithm Trains with the first 2/3 of a patient data and then it tests on the last 1/3. All patients were tested."
    ]
   },
   {
@@ -1559,6 +1586,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm managed to learn for a longer time generally."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1636,14 +1670,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Applying an LSTM Network to a Train and Test set\n",
+    "### 6.2 LSTM\n",
     "\n",
-    "### Model"
+    "#### 6.2.1 Balacing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1766,7 @@
        " 'all-one-lstm-test/P5']"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,8 +1778,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2.2 Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,12 +1862,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Patient KFold"
+    "#### 6.2.3 Patient KFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1973,72 +2014,6 @@
     "    plt.xticks(rotation=90)\n",
     "plt.savefig('images/scoreboard_lstm.pdf')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Benchmarking with LogisticRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_cmb_std(df, window = 30):\n",
-    "    data_combined1 = df[1].rolling(window, center=True).std()\n",
-    "    data_combined2 = df[2].rolling(window, center=True).std()\n",
-    "    data_combined3 = df[3].rolling(window, center=True).std()\n",
-    "    arr = np.array([\n",
-    "        data_combined1.tolist(),\n",
-    "        data_combined2.tolist(),\n",
-    "        data_combined3.tolist()\n",
-    "        ])\n",
-    "    data_combined = arr.sum(axis = 0)\n",
-    "\n",
-    "    df[\"combinedSTD\"] = data_combined\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.96      0.84      0.90     22360\n",
-      "         1.0       0.59      0.87      0.70      5790\n",
-      "\n",
-      "    accuracy                           0.85     28150\n",
-      "   macro avg       0.77      0.86      0.80     28150\n",
-      "weighted avg       0.88      0.85      0.86     28150\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "your_model = LogisticRegression(max_iter=1000, random_state=42)\n",
-    "your_model.fit(X_res[:,3].reshape(-1, 1), y_res)\n",
-    "y_pred = your_model.predict(data_test[:,3].reshape(-1 ,1))\n",
-    "\n",
-    "print(classification_report(data_test[:,-1], y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can notice that using just the Combined Standard deviation can bring a better recall, though the precision seems to be better by using our TLFFN."
    ]
   }
  ],
